--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Tag selector to select the 'body' element */
 body {
-  /* Your code here! */
+  /header align;center/
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
